deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bigg-proxy
spec:
  selector:
    matchLabels:
      app: bigg-proxy
  replicas: 1
  template:
    metadata:
      labels:
        app: bigg-proxy
    spec:
      containers:
      - name: web
        image: gcr.io/dd-decaf-cfbf6/bigg-proxy:master
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1000m"
